--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 
-
 <div>
   <h2>Select Road</h2>
   <select [(ngModel)]="selectedRoadId" (change)="onRoadSelected()">
@@ -16,16 +15,25 @@
     </ng-container>
     <ng-container matColumnDef="description">
       <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
-      <mat-cell *matCellDef="let roadwork">{{
-        roadwork.description.join(", ")
-      }}</mat-cell>
+      <mat-cell *matCellDef="let roadwork">{{ roadwork.description.join(", ") }}</mat-cell>
     </ng-container>
-    <mat-header-row
-      *matHeaderRowDef="['title', 'description']"
-    ></mat-header-row>
-    <mat-row *matRowDef="let row; columns: ['title', 'description']"></mat-row>
+    <ng-container matColumnDef="viewOnMap" >
+      <mat-header-cell *matHeaderCellDef style="display: flex; justify-content: center; align-items: center;">View on Map</mat-header-cell>
+      <mat-cell *matCellDef="let roadwork" style="display: flex; justify-content: center; align-items: center;">
+        <ng-container *ngIf="roadwork.coordinate && roadwork.coordinate.lat && roadwork.coordinate.long">
+          <button mat-icon-button (click)="openMap(roadwork.coordinate)">
+            <mat-icon aria-label="View on Map">map</mat-icon>
+          </button>
+        </ng-container>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="['title', 'description',  'viewOnMap']"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: ['title', 'description', 'viewOnMap']"></mat-row>
   </mat-table>
 </div>
+
+
 
 <div *ngIf="webcamsData">
   <h2>Webcams</h2>
@@ -52,10 +60,23 @@
         restArea.description.join(", ")
       }}</mat-cell>
     </ng-container>
-    <mat-header-row
-      *matHeaderRowDef="['title', 'description']"
-    ></mat-header-row>
-    <mat-row *matRowDef="let row; columns: ['title', 'description']"></mat-row>
+    <ng-container matColumnDef="lat">
+      <mat-header-cell *matHeaderCellDef>lat</mat-header-cell>
+      <mat-cell *matCellDef="let restArea">{{ restArea.lat }}</mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="viewOnMap" >
+      <mat-header-cell *matHeaderCellDef style="display: flex; justify-content: center; align-items: center;">View on Map</mat-header-cell>
+      <mat-cell *matCellDef="let roadwork" style="display: flex; justify-content: center; align-items: center;">
+        <ng-container *ngIf="roadwork.coordinate && roadwork.coordinate.lat && roadwork.coordinate.long">
+          <button mat-icon-button (click)="openMap(roadwork.coordinate)">
+            <mat-icon aria-label="View on Map">map</mat-icon>
+          </button>
+        </ng-container>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="['title', 'description',  'viewOnMap']"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: ['title', 'description', 'viewOnMap']"></mat-row>
   </mat-table>
 </div>
 
@@ -72,10 +93,19 @@
         trafficReport.description.join(", ")
       }}</mat-cell>
     </ng-container>
-    <mat-header-row
-      *matHeaderRowDef="['title', 'description']"
-    ></mat-header-row>
-    <mat-row *matRowDef="let row; columns: ['title', 'description']"></mat-row>
+    <ng-container matColumnDef="viewOnMap" >
+      <mat-header-cell *matHeaderCellDef style="display: flex; justify-content: center; align-items: center;">View on Map</mat-header-cell>
+      <mat-cell *matCellDef="let roadwork" style="display: flex; justify-content: center; align-items: center;">
+        <ng-container *ngIf="roadwork.coordinate && roadwork.coordinate.lat && roadwork.coordinate.long">
+          <button mat-icon-button (click)="openMap(roadwork.coordinate)">
+            <mat-icon aria-label="View on Map">map</mat-icon>
+          </button>
+        </ng-container>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="['title', 'description',  'viewOnMap']"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: ['title', 'description', 'viewOnMap']"></mat-row>
   </mat-table>
 </div>
 
@@ -94,9 +124,18 @@
         chargingStation.description.join(", ")
       }}</mat-cell>
     </ng-container>
-    <mat-header-row
-      *matHeaderRowDef="['title', 'description']"
-    ></mat-header-row>
-    <mat-row *matRowDef="let row; columns: ['title', 'description']"></mat-row>
+    <ng-container matColumnDef="viewOnMap" >
+      <mat-header-cell *matHeaderCellDef style="display: flex; justify-content: center; align-items: center;">View on Map</mat-header-cell>
+      <mat-cell *matCellDef="let roadwork" style="display: flex; justify-content: center; align-items: center;">
+        <ng-container *ngIf="roadwork.coordinate && roadwork.coordinate.lat && roadwork.coordinate.long">
+          <button mat-icon-button (click)="openMap(roadwork.coordinate)">
+            <mat-icon aria-label="View on Map">map</mat-icon>
+          </button>
+        </ng-container>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="['title', 'description',  'viewOnMap']"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: ['title', 'description', 'viewOnMap']"></mat-row>
   </mat-table>
 </div>
