made a map with entered coordinates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,142 +1,5 @@
-
 <div class="container">
-  <h2>Select Road</h2>
-  <select [(ngModel)]="selectedRoadId" (change)="onRoadSelected()" style="height: 40px;">
-    <option *ngFor="let road of roads" [value]="road">{{ road }}</option>
-  </select>
-</div>
+  
+  <router-outlet></router-outlet>
 
-
-<div *ngIf="roadworksData">
-  <h2>Roadworks</h2>
-  <mat-table [dataSource]="roadworksData">
-    <ng-container matColumnDef="title">
-      <mat-header-cell *matHeaderCellDef>Title</mat-header-cell>
-      <mat-cell *matCellDef="let roadwork">{{ roadwork.title }}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="description">
-      <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
-      <mat-cell *matCellDef="let roadwork">{{ roadwork.description.join(", ") }}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="viewOnMap">
-      <mat-header-cell *matHeaderCellDef>View on Map</mat-header-cell>
-      <mat-cell *matCellDef="let roadwork">
-        <ng-container *ngIf="roadwork.coordinate && roadwork.coordinate.lat && roadwork.coordinate.long">
-          <button mat-icon-button (click)="openMap(roadwork.coordinate)">
-            <mat-icon aria-label="View on Map">location_on</mat-icon>
-          </button>
-        </ng-container>
-      </mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="['title', 'description',  'viewOnMap']"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: ['title', 'description', 'viewOnMap']"></mat-row>
-  </mat-table>
-</div>
-
-
-
-<div *ngIf="webcamsData">
-  <h2>Webcams</h2>
-  <mat-table [dataSource]="webcamsData">
-    <ng-container matColumnDef="webcamName">
-      <mat-header-cell *matHeaderCellDef>Webcam Name</mat-header-cell>
-      <mat-cell *matCellDef="let webcam">{{ webcam.webcamName }}</mat-cell>
-    </ng-container>
-    <mat-header-row *matHeaderRowDef="['webcamName']"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: ['webcamName']"></mat-row>
-  </mat-table>
-</div>
-
-<div *ngIf="restAreasData">
-  <h2>Rest Areas</h2>
-  <mat-table [dataSource]="restAreasData">
-    <ng-container matColumnDef="title">
-      <mat-header-cell *matHeaderCellDef>Title</mat-header-cell>
-      <mat-cell *matCellDef="let restArea">{{ restArea.title }}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="description">
-      <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
-      <mat-cell *matCellDef="let restArea">{{
-        restArea.description.join(", ")
-      }}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="lat">
-      <mat-header-cell *matHeaderCellDef>lat</mat-header-cell>
-      <mat-cell *matCellDef="let restArea">{{ restArea.lat }}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="viewOnMap" >
-      <mat-header-cell *matHeaderCellDef style="display: flex; justify-content: center; align-items: center;">View on Map</mat-header-cell>
-      <mat-cell *matCellDef="let roadwork" style="display: flex; justify-content: center; align-items: center;">
-        <ng-container *ngIf="roadwork.coordinate && roadwork.coordinate.lat && roadwork.coordinate.long">
-          <button mat-icon-button (click)="openMap(roadwork.coordinate)">
-            <mat-icon aria-label="View on Map">map</mat-icon>
-          </button>
-        </ng-container>
-      </mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="['title', 'description',  'viewOnMap']"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: ['title', 'description', 'viewOnMap']"></mat-row>
-  </mat-table>
-</div>
-
-<div *ngIf="trafficReportsData">
-  <h2>Traffic reports</h2>
-  <mat-table [dataSource]="trafficReportsData">
-    <ng-container matColumnDef="title">
-      <mat-header-cell *matHeaderCellDef>Title</mat-header-cell>
-      <mat-cell *matCellDef="let trafficReport">{{ trafficReport.title }}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="description">
-      <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
-      <mat-cell *matCellDef="let trafficReport">{{
-        trafficReport.description.join(", ")
-      }}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="viewOnMap" >
-      <mat-header-cell *matHeaderCellDef style="display: flex; justify-content: center; align-items: center;">View on Map</mat-header-cell>
-      <mat-cell *matCellDef="let roadwork" style="display: flex; justify-content: center; align-items: center;">
-        <ng-container *ngIf="roadwork.coordinate && roadwork.coordinate.lat && roadwork.coordinate.long">
-          <button mat-icon-button (click)="openMap(roadwork.coordinate)">
-            <mat-icon aria-label="View on Map">map</mat-icon>
-          </button>
-        </ng-container>
-      </mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="['title', 'description',  'viewOnMap']"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: ['title', 'description', 'viewOnMap']"></mat-row>
-  </mat-table>
-</div>
-
-<div *ngIf="chargingStationsData">
-  <h2>Charging Stations</h2>
-  <mat-table [dataSource]="chargingStationsData">
-    <ng-container matColumnDef="title">
-      <mat-header-cell *matHeaderCellDef>Title</mat-header-cell>
-      <mat-cell *matCellDef="let chargingStation">{{
-        chargingStation.title
-      }}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="description">
-      <mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
-      <mat-cell *matCellDef="let chargingStation">{{
-        chargingStation.description.join(", ")
-      }}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="viewOnMap" >
-      <mat-header-cell *matHeaderCellDef style="display: flex; justify-content: center; align-items: center;">View on Map</mat-header-cell>
-      <mat-cell *matCellDef="let roadwork" style="display: flex; justify-content: center; align-items: center;">
-        <ng-container *ngIf="roadwork.coordinate && roadwork.coordinate.lat && roadwork.coordinate.long">
-          <button mat-icon-button (click)="openMap(roadwork.coordinate)">
-            <mat-icon aria-label="View on Map">map</mat-icon>
-          </button>
-        </ng-container>
-      </mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="['title', 'description',  'viewOnMap']"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: ['title', 'description', 'viewOnMap']"></mat-row>
-  </mat-table>
 </div>
