--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+
 .mat-header-cell{
     font-weight: bold;
     display: flex; 
@@ -18,4 +21,14 @@ h2{
 .container{
     display: flex; 
     align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
 }
+body {
+    background: linear-gradient(to bottom, #f4f4f4, #ffffff); 
+    margin: 0;
+    padding: 0;
+    font-family: 'Helvetica', 'Arial', sans-serif; 
+    color: #333;
+  }
