--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -1,7 +1,18 @@
 #map{
     height: 100vh; 
-    width: 100vw; 
+    width: 100%; 
     top: 0; 
     left: 0; 
     position: absolute;
+    box-sizing: border-box;
+}
+
+/* Mobile adjustments for map */
+@media (max-width: 768px) {
+    #map {
+        height: calc(100vh - 60px);
+        position: relative;
+        top: auto;
+        left: auto;
+    }
 }
